--- a/CppProjects/020_Hello1/emdist/Hello1.html
+++ b/CppProjects/020_Hello1/emdist/Hello1.html
@@ -8,12 +8,12 @@
     <style>
         * { font-family: 'Work Sans', sans-serif; font-weight: 100}
         h1 { text-align: center; font-weight: 100;  }
-      .emscripten { padding-right: 0; margin-left: auto; margin-right: auto; display: block; }
+      .emscripten { padding-right: 10%; padding-left: 10%; margin-left: auto; margin-right: auto; display: block; width: 80%; height: auto; background-color: white }
       textarea.emscripten { font-family: monospace; width: 80%; }
       div.emscripten { text-align: center; }
-      div.emscripten_border { border: 0px solid black; }
+      div.emscripten_border { border: 0px solid black}
       /* the canvas *must not* have any border or padding, or mouse coords will be wrong */
-      canvas.emscripten { border: 0px none; background-color: black; }
+      canvas.emscripten { border: 0px none; background-color: white}
       .spinner {
         height: 50px;
         width: 50px;
